fixes on mobile view

--- a/src/app/pages/checkout/style.scss
+++ b/src/app/pages/checkout/style.scss
@@ -266,6 +266,8 @@
             justify-content: center;
             align-items: center;
             align-self: stretch;
+            padding: 16px;
+
         }
     }
    
